# pybind11_examples

./: .gitignore  LICENSE  README.md
00_example_template/: CMakeLists.txt  README.md
00_example_template/src/: example.cpp
01_CPP_To_Python_Pass_By_Reference/src/: example.cpp  example.py
02_Return_Result_From_Py_to_CPP/src/: example.cpp  example.py
03_Pass_By_Reference_CPP_Class/src/: example.cpp
